MemberDao를 의존하고 있는 클래스에 주입(DI)